--- a/hadoop/hadoop.gradle
+++ b/hadoop/hadoop.gradle
@@ -19,20 +19,29 @@ dependencies {
 
     compile libraries.hadoopClient
     /*
+    compile libraries.hiveJdbc
+    compile libraries.hiveService
+    compile libraries.hiveMetastore
+    compile libraries.hiveExec
+    compile libraries.libthrift
+    compile libraries.libfb303
+    */
+    /*
     compile libraries.hadoopCommon
     compile libraries.hadoopHdfs
     compile libraries.hadoopMapreduceClientCore
     compile libraries.hadoopMapreduceClientJobclient
     */
 
+    compile libraries.mysqlConnectorJava
     compile libraries.hsqldb
     compile libraries.slf4jApi
     compile libraries.logbackClassic
     compile libraries.logbackCore
     compile libraries.guava14
-    compile libraries.scala10Compiler
-    compile libraries.scala10Reflect
-    compile libraries.scala10Library
+    compile libraries.scala11Compiler
+    compile libraries.scala11Reflect
+    compile libraries.scala11Library
 
-    compile fileTree(dir: "$sparkLibs", include: "spark-assembly-1.1.0-hadoop2.5.1.jar")
+    compile fileTree(dir: "$sparkLibs", include: "spark-assembly-*.jar")
 }
