--- a/libraries.gradle
+++ b/libraries.gradle
@@ -9,9 +9,10 @@ ext {
     commonsDbutilsVer = '1.6'
     commonsCollectionsVer = '3.2.1'
 
-    hadoopVer = '2.5.1'
+    hadoopVer = '2.5.2'
     sparkVer = '1.1'
-    hiveVer = '0.13.1'
+    hiveVer = '0.14.0'
+    thriftVer = '0.9.2'
 
     hamcrestVer = '1.3'
     junitVer = '4.11'
@@ -104,6 +105,12 @@ ext {
         hadoopMapreduceClientJobclient: "org.apache.hadoop:hadoop-mapreduce-client-jobclient:${hadoopVer}",
         hadoopMapreduce: "org.apache.hadoop:hadoop-mapreduce:${hadoopVer}",
         hadoopMapreduceClientCommon: "org.apache.hadoop:hadoop-mapreduce-client-common:${hadoopVer}",
+        hiveJdbc: "org.apache.hive:hive-jdbc:${hiveVer}@jar",
+        hiveService: "org.apache.hive:hive-service:${hiveVer}@jar",
+        hiveExec: "org.apache.hive:hive-exec:${hiveVer}@jar",
+        hiveMetastore: "org.apache.hive:hive-metastore:${hiveVer}@jar",
+        libfb303: "org.apache.thrift:libfb303:${thriftVer}@jar",
+        libthrift: "org.apache.thrift:libthrift:${thriftVer}@jar",
 
         hamcrestCore: "org.hamcrest:hamcrest-core:${hamcrestVer}@jar",
         junit: "junit:junit:${junitVer}@jar",
