--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,5 @@
-sparkLibs = /usr/local/tools/spark/lib
-jettyHome = d:/tools/jetty9
 projectBuildDir = target
-webappDir = webapps
 projectEncoding = utf-8
-org.gradle.jvmargs=-XX:MaxPermSize=512m -XX:+CMSClassUnloadingEnabled
--XX:+CMSPermGenSweepingEnable -XX:+HeapDumpOnOutOfMemoryError -Xmx1024m
--Dfile.encoding=utf-8
+org.gradle.daemon = true
+org.gradle.java.home=/usr/lib/jvm/default-java
+org.gradle.jvmargs=-Xmx1024m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8 
