--- a/build.gradle
+++ b/build.gradle
@@ -1,116 +1,85 @@
-allprojects {
+buildscript {
     repositories {
         mavenCentral()
         jcenter()
         mavenLocal()
     }
-    apply plugin: 'java'
-    apply plugin: 'maven'
-    apply plugin: 'idea'
-    //apply plugin: 'eclipse-wtp'
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.3'
+    }
 }
 
-buildscript {
-    repositories {
-        maven {
-            name 'JFrog OSS snapshot repo'
-            url  'https://oss.jfrog.org/oss-snapshot-local/'
-        }
-        mavenCentral()
-        jcenter()
-	    mavenLocal()
-    }
-    dependencies {
-        classpath 'me.champeau.gradle:antlr4-gradle-plugin:0.1'
-    }
+plugins {
+    id 'java' // or 'groovy' Must be explicitly applied
+    id 'scala'
+    id 'idea'
+    id 'com.github.johnrengelman.shadow' version '1.2.3'
 }
 
 apply from: 'libraries.gradle'
 
-subprojects { subProject ->
-    
-    defaultTasks 'build'
-
-    group = 'com.github.laomie'
-    version = '0.1'
-
-    /* 编译编码为utf8的源码 */
-    [compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
-    compileJava.options.define(compilerArgs: ["-proc:none", "-encoding", "UTF-8"])
-    compileTestJava.options.define(compilerArgs: ["-proc:none", "-encoding", "UTF-8"])
-    compileJava.options.compilerArgs << "-XDignore.symbol.file"
-
-    tasks.withType(GroovyCompile) {
-	    groovyOptions.encoding = "MacRoman"
-    }
-
-    task myJavadocs(type: Javadoc) {
-	    source = sourceSets.main.allJava
-    }
-
-    // minimize changes, at least for now (gradle uses 'build' by default)..
-    project.buildDir = "$projectBuildDir"
-
-    task copyDepLibs(type: Copy) {  
-        into "$buildDir/output/lib"  
-        from configurations.runtime  
-    }
-
-    uploadArchives {
-        repositories {
-           flatDir {
-               dirs 'repos'
-           }
-        }
-    }
-
-    if ( ! subProject.name.startsWith( 'release' )  && ! subProject.name.startsWith( 'documentation' ) ) {
-        configurations {
-            provided {
-            // todo : need to make sure these are non-exported
-            description = 'Non-exported compile-time dependencies.'
-            }
-            deployerJars {
-            description = 'Jars needed for doing deployment to JBoss Nexus repo'
-            }
-            configurations {
-            all*.exclude group: 'xml-apis', module: 'xml-apis'
-            }
-
-        }
-
-        test {
-            maxHeapSize = "1024m"
-        }
-
-        processTestResources.doLast( {
-            copy {
-            from( sourceSets.test.java.srcDirs ) {
-                include '**/*.properties'
-                include '**/*.xml'
-            }
-            into sourceSets.test.output.classesDir
-            }
-        } )
-
-        assemble.doLast( { install } )
-
-        targetCompatibility = "1.8"
-        sourceCompatibility = "1.8"
-
-        task sourcesJar(type: Jar, dependsOn: compileJava) {
-            from sourceSets.main.allSource
-            classifier = 'sources'
-        }
-
-        artifacts {
-            archives sourcesJar
-        }
-
-    }
-
+//Get dependencies from Maven central repository
+repositories {
+    mavenCentral()
+    jcenter()
+    mavenLocal()
 }
 
+project.buildDir = "target"
+
+//Project dependencies
+dependencies {
+    testCompile libraries.hamcrestCore
+    testCompile libraries.junit
+
+    compile libraries.logbackClassic
+    compile libraries.slf4jLog4j12
+    compile libraries.kafka
+    compile libraries.scala11Compiler
+    compile libraries.scala11Reflect
+    compile libraries.scala11Library
+    compile libraries.scala11Scalap
+
+    compile libraries.sparkCore
+    compile libraries.sparkSql
+    compile libraries.sparkHive
+    compile libraries.sparkCsv
+    compile libraries.sparkRepl
+    compile libraries.sparkMllib
+    compile libraries.sparkYarn
+    compile libraries.sparkStreaming
+    compile libraries.sparkStreamingKafka
+
+    compile libraries.sparkCassnadra
+
+    compile libraries.mysqlConnectorJava
+
+    compile libraries.datanucleusApi
+    compile libraries.datanucleusRdbms
+    compile libraries.datanucleusCore
+
+    //compile files('libs/phoenix-4.5.0-HBase-1.0-client.jar')
+}
+
+shadowJar {
+    relocate 'com.google.common', 'com.adwo.com.google.common'
+    zip64 true
+}
+
+task run(type: JavaExec, dependsOn: classes) {
+    main = 'Main'
+    classpath sourceSets.main.runtimeClasspath
+    classpath configurations.runtime
+}
+
+task copyToShell(type: Copy)
+copyToShell {
+    from('target/libs')
+    into('./')
+    include('*.jar')
+}
+copyToShell.dependsOn shadowJar
+
 task wrapper(type: Wrapper) {
-    gradleVersion = '2.2'
+    gradleVersion = '2.11'
 }
