--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,2 @@
-include 'hadoop'
+rootProject.name = 'log_system'
 
-rootProject.children.each { project ->
-    project.buildFileName = "${project.name}.gradle"
-    assert project.projectDir.isDirectory()
-    assert project.buildFile.isFile()
-}
