--- a/libraries.gradle
+++ b/libraries.gradle
@@ -7,11 +7,13 @@ ext {
     hadoopVer = '2.7.3'
     sparkVer = '1.6.2'
     sparkCsvVer = '1.5.0'
-    hiveVer = '1.2.1'
+    hiveVer = '2.1.0'
     hbaseVer = '1.1.6'
     kafkaVer = '0.8.2.2'
     phoenixVer = '4.8.0-HBase-1.1'
+    prestoVer = '0.152.1'
     sparkCassandraVer = '1.6.2'
+    thriftVer = '0.9.3'
 
     hamcrestVer = '1.3'
     junitVer = '4.12'
@@ -34,8 +36,33 @@ ext {
         commonsIo: "commons-io:commons-io:${commonsIoVer}@jar",
         commonsLang3: "org.apache.commons:commons-lang3:${commonsLang3Ver}@jar",
 
+        scala11Library: "org.scala-lang:scala-library:${scala11Ver}@jar",
+        scala11Compiler: "org.scala-lang:scala-compiler:${scala11Ver}@jar",
+        scala11Reflect: "org.scala-lang:scala-reflect:${scala11Ver}@jar",
+        scala11Scalap: "org.scala-lang:scalap:${scala11Ver}@jar",
+        scalatest: "org.scalatest:scalatest_${scalaVersion}:${scalatestVer}",
+
         hadoopClient: "org.apache.hadoop:hadoop-client:${hadoopVer}",
+        //hadoopMinicluster: "org.apache.hadoop:hadoop-minicluster:${hadoopVer}",
+        //hadoopCommon: "org.apache.hadoop:hadoop-common:${hadoopVer}",
+        //hadoopHdfs: "org.apache.hadoop:hadoop-hdfs:${hadoopVer}",
+        //hadoopMapreduceClientCore: "org.apache.hadoop:hadoop-mapreduce-client-core:${hadoopVer}",
+        //hadoopMapreduceClientJobclient: "org.apache.hadoop:hadoop-mapreduce-client-jobclient:${hadoopVer}",
+        //hadoopMapreduce: "org.apache.hadoop:hadoop-mapreduce:${hadoopVer}",
+        //hadoopMapreduceClientCommon: "org.apache.hadoop:hadoop-mapreduce-client-common:${hadoopVer}",
+        hbaseClient: "org.apache.hbase:hbase-client:${hbaseVer}",
+        hbaseServer: "org.apache.hbase:hbase-server:${hbaseVer}",
         phoenixCore: "org.apache.phoenix:phoenix-core:${phoenixVer}",
+        prestoJdbc: "com.facebook.presto:presto-jdbc:${prestoVer}",
+
+        hiveJdbc: "org.apache.hive:hive-jdbc:${hiveVer}@jar",
+        hiveService: "org.apache.hive:hive-service:${hiveVer}@jar",
+        hiveExec: "org.apache.hive:hive-exec:${hiveVer}@jar",
+        hiveMetastore: "org.apache.hive:hive-metastore:${hiveVer}@jar",
+        libfb303: "org.apache.thrift:libfb303:${thriftVer}@jar",
+        libthrift: "org.apache.thrift:libthrift:${thriftVer}@jar",
+
+        kafka: "org.apache.kafka:kafka_${scalaVersion}:${kafkaVer}",
 
         sparkCsv: "com.databricks:spark-csv_${scalaVersion}:${sparkCsvVer}",
         sparkCore: "org.apache.spark:spark-core_${scalaVersion}:${sparkVer}",
@@ -46,13 +73,7 @@ ext {
         sparkYarn: "org.apache.spark:spark-yarn_${scalaVersion}:${sparkVer}",
         sparkStreaming: "org.apache.spark:spark-streaming_${scalaVersion}:${sparkVer}",
         sparkStreamingKafka: "org.apache.spark:spark-streaming-kafka_${scalaVersion}:${sparkVer}",
-        //sparkSql: "org.apache.spark:spark-sql_${scalaVersion}:${sparkVer}",
         sparkCassnadra: "com.datastax.spark:spark-cassandra-connector_${scalaVersion}:${sparkCassandraVer}",
-
-        hbaseClient: "org.apache.hbase:hbase-client:${hbaseVer}",
-        hbaseServer: "org.apache.hbase:hbase-server:${hbaseVer}",
-
-        kafka: "org.apache.kafka:kafka_${scalaVersion}:${kafkaVer}",
 
         hamcrestCore: "org.hamcrest:hamcrest-core:${hamcrestVer}@jar",
         junit: "junit:junit:${junitVer}@jar",
@@ -68,18 +89,6 @@ ext {
         julToSlf4j: "org.slf4j:jul-to-slf4j:${slf4jVer}@jar",
         jclOverSlf4j: "org.slf4j:jcl-over-slf4j:${slf4jVer}@jar",
         //jclOverSlf4j: "org.slf4j:jcl-over-slf4j:${slf4jVer}@jar",
-
-        scala11Library: "org.scala-lang:scala-library:${scala11Ver}@jar",
-        scala11Compiler: "org.scala-lang:scala-compiler:${scala11Ver}@jar",
-        scala11Reflect: "org.scala-lang:scala-reflect:${scala11Ver}@jar",
-        scala11Scalap: "org.scala-lang:scalap:${scala11Ver}@jar",
-        scalatest: "org.scalatest:scalatest_${scalaVersion}:${scalatestVer}",
-
-        //scala10Library: "org.scala-lang:scala-library:${scala10Ver}@jar",
-        //scala10Compiler: "org.scala-lang:scala-compiler:${scala10Ver}@jar",
-        //scala10Reflect: "org.scala-lang:scala-reflect:${scala10Ver}@jar",
-        //scala10Scalap: "org.scala-lang:scalap:${scala10Ver}@jar",
-        //paradise: "org.scalamacros:paradise_${scala10Ver}:${paradiseVer}",
 
         sqliteJdbc: "org.xerial:sqlite-jdbc:${sqliteJdbcVer}@jar",
         mysqlConnectorJava: "mysql:mysql-connector-java:${mysqlConnectorJavaVer}",
