--- a/libraries.gradle
+++ b/libraries.gradle
@@ -5,26 +5,26 @@ ext {
     commonsIoVer = '2.4'
 
     hadoopVer = '2.7.3'
-    sparkVer = '1.6.2'
-    sparkCsvVer = '1.5.0'
-    hiveVer = '2.1.0'
-    hbaseVer = '1.1.6'
+    sparkVer = '2.1.0'
+    hiveVer = '2.1.1'
+    hbaseVer = '1.1.8'
     kafkaVer = '0.8.2.2'
-    phoenixVer = '4.8.0-HBase-1.1'
-    prestoVer = '0.152.1'
-    sparkCassandraVer = '1.6.2'
+    phoenixVer = '4.9.0-HBase-1.1'
+    prestoVer = '0.166'
+    sparkCassandraVer = '2.0.0-M3'
     thriftVer = '0.9.3'
 
     hamcrestVer = '1.3'
     junitVer = '4.12'
 
-    log4jVer = '2.6.2'
-    slf4jVer = '1.7.21'
-    logbackVer = '1.1.7'
+    log4jVer = '2.8'
+    slf4jVer = '1.7.23'
+    logbackVer = '1.2.1'
 
     scala11Ver = '2.11.8'
     scalatestVer = '3.0.0'
     paradiseVer = '2.1.0'
+    configVer = '1.3.1'
 
     mysqlConnectorJavaVer = '5.1.39'
     sqliteJdbcVer = '3.8.11.2'
@@ -41,8 +41,10 @@ ext {
         scala11Reflect: "org.scala-lang:scala-reflect:${scala11Ver}@jar",
         scala11Scalap: "org.scala-lang:scalap:${scala11Ver}@jar",
         scalatest: "org.scalatest:scalatest_${scalaVersion}:${scalatestVer}",
+        config: "com.typesafe:config:${configVer}",
 
         hadoopClient: "org.apache.hadoop:hadoop-client:${hadoopVer}",
+        hadoopWebProxy:"org.apache.hadoop:hadoop-yarn-server-web-proxy:${hadoopVer}@jar",
         //hadoopMinicluster: "org.apache.hadoop:hadoop-minicluster:${hadoopVer}",
         //hadoopCommon: "org.apache.hadoop:hadoop-common:${hadoopVer}",
         //hadoopHdfs: "org.apache.hadoop:hadoop-hdfs:${hadoopVer}",
@@ -64,7 +66,6 @@ ext {
 
         kafka: "org.apache.kafka:kafka_${scalaVersion}:${kafkaVer}",
 
-        sparkCsv: "com.databricks:spark-csv_${scalaVersion}:${sparkCsvVer}",
         sparkCore: "org.apache.spark:spark-core_${scalaVersion}:${sparkVer}",
         sparkSql: "org.apache.spark:spark-sql_${scalaVersion}:${sparkVer}",
         sparkHive: "org.apache.spark:spark-hive_${scalaVersion}:${sparkVer}",
@@ -72,7 +73,7 @@ ext {
         sparkMllib: "org.apache.spark:spark-mllib_${scalaVersion}:${sparkVer}",
         sparkYarn: "org.apache.spark:spark-yarn_${scalaVersion}:${sparkVer}",
         sparkStreaming: "org.apache.spark:spark-streaming_${scalaVersion}:${sparkVer}",
-        sparkStreamingKafka: "org.apache.spark:spark-streaming-kafka_${scalaVersion}:${sparkVer}",
+        sparkStreamingKafka: "org.apache.spark:spark-streaming-kafka-0-8_${scalaVersion}:${sparkVer}",
         sparkCassnadra: "com.datastax.spark:spark-cassandra-connector_${scalaVersion}:${sparkCassandraVer}",
 
         hamcrestCore: "org.hamcrest:hamcrest-core:${hamcrestVer}@jar",
